# libreddit

./: .gitignore  .replit  2  CODEOWNERS  CREDITS  Cargo.toml  Dockerfile  Dockerfile.arm  Dockerfile.arm64  Dockerfile.armv7  Dockerfile.armv7rust  Dockerfile.fromimage  FUNDING.yml  README.md  Rocket.toml  app.json  build.rs  cargo-timing.html  docker-compose.yml  heroku.yml  instances.csv  rustfmt.toml  seccomp-libreddit.json  tree.txt
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_parity.md  feature_request.md
.github/workflows/: docker-arm.yml  docker-armv7.yml  docker-build.yml  docker.yml  main-docker-arm.yml  main-docker.yml  main-rust.yml  pull-request.yml  rust-clippy.yml  rust-fmt.yml  rust-tests.yml  rust.yml
contrib/: ferrit.service  libbacon.service  libreddit.conf  libreddit.plist  libreddit.service
docs/: unraid-installation-guide.md
scripts/: gen-credits.sh
src/: client.rs  config.rs  duplicates.rs  instance_info.rs  main.rs  oauth.rs  popular.rs  post.rs  proxy.rs  saved.rs  search.rs  server.rs  settings.rs  subreddit.rs  user.rs  utils.rs
static/: hls.min.js  manifest.json  opensearch.xml  playHLSVideo.js  robots.txt  style.css
static/themes/: black.css  dark.css  doomone.css  dracula.css  gold.css  gruvboxdark.css  gruvboxlight.css  laserwave.css  light.css  nord.css  rosebox.css  tokyoNight.css  violet.css
templates/: base.html  comment.html  duplicates.html  error.html  message.html  nsfwlanding.html  popular.html  popular.html.hbs  post.html  post.html.hbs  saved.html  search.html  settings.html  subreddit.html  subreddit.html.hbs  user.html  user.html.hbs  utils.html  wall.html  wiki.html
testdata/: cross_post_parent_list.json
