[package]
name = "ferrit"
description = " Alternative private front-end to Reddit"
license = "AGPL-3.0"
repository = "https://github.com/ferritreader/ferrit"
version = "0.1.0"
authors = ["Daniel Valentine <Daniel-Valentine@users.noreply.github.com>", "spikecodes <19519553+spikecodes@users.noreply.github.com>"]
edition = "2021"

[dependencies]
askama = { version = "0.11.1", default-features = false }
async-recursion = "1.0.0"
cached = "0.40.0"
clap = { version = "3.1.18", default-features = false, features = ["std"] }
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive"] }
cookie = "0.16.0"
futures-lite = "1.12.0"
hyper = { version = "0.14.19", features = ["full"] }
hyper-rustls = "0.23.0"
percent-encoding = "2.1.0"
route-recognizer = "0.3.1"
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
time = "0.3.9"
url = "2.2.2"
rust-embed = "6.4.0"
libflate = "1.2.0"
brotli = { version = "3.3.4", features = ["std"] }
toml = "0.5.9"
once_cell = "1.16.0"

[dev-dependencies]
lipsum = "0.8.2"
sealed_test = "1.0.0"
