[package]
name = "libreddit"
description = " Alternative private front-end to Reddit"
license = "AGPL-3.0"
repository = "https://github.com/spikecodes/libreddit"
version = "0.30.1"
authors = ["spikecodes <19519553+spikecodes@users.noreply.github.com>"]
edition = "2021"

[dependencies]
askama = { version = "0.11.1", default-features = false }
cached = "0.42.0"
clap = { version = "4.1.1", default-features = false, features = ["std", "env"] }
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
cookie = "0.16.2"
futures-lite = "1.12.0"
hyper = { version = "0.14.23", features = ["full"] }
hyper-rustls = "0.23.2"
percent-encoding = "2.2.0"
route-recognizer = "0.3.1"
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
time = { version = "0.3.17", features = ["local-offset"] }
url = "2.3.1"
rust-embed = { version = "6.4.2", features = ["include-exclude"] }
libflate = "1.2.0"
brotli = { version = "3.3.4", features = ["std"] }
toml = "0.5.10"
once_cell = "1.17.0"
serde_yaml = "0.9.16"
build_html = "2.2.0"

[dev-dependencies]
lipsum = "0.8.2"
sealed_test = "1.0.0"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
